--- a/package.json
+++ b/package.json
@@ -17,25 +17,27 @@
   },
   "homepage": "https://github.com/amirrajan/coworkingdotcom",
   "dependencies": {
-    "express": "^4.1.1",
-    "ejs": "^1.0.0",
-    "underscore": "^1.6.0",
-    "passport": "^0.2.0",
     "body-parser": "^1.0.2",
+    "bower": "^1.3.12",
     "cookie-parser": "^1.0.1",
     "cookie-session": "^1.0.1",
-    "request": "^2.34.0",
+    "ejs": "^1.0.0",
+    "express": "^4.1.1",
+    "node-uuid": "^1.4.1",
+    "oauth": "^0.9.11",
+    "passport": "^0.2.0",
+    "passport-twitter": "^1.0.2",
+    "qs": "^0.6.6",
     "redis": "^0.10.1",
     "redis-url": "^0.2.0",
-    "node-uuid": "^1.4.1",
-    "passport-twitter": "^1.0.2",
-    "oauth": "^0.9.11",
-    "qs": "^0.6.6"
+    "request": "^2.34.0",
+    "underscore": "^1.6.0"
   },
   "devDependencies": {
-    "grunt-nodemon": "~0.2.0",
-    "grunt": "~0.4.2",
+    "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-env": "~0.4.1",
+    "grunt-nodemon": "~0.2.0",
     "nodemon": "~1.0.14"
   }
 }
